# p2pcc

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSGX.cmake
src/client/: client-attestation.c  client-attestation.h  client-proxy.c
src/enclave/graphene/: Makefile  as.manifest.template  cc1.manifest.template  clang-daemon.manifest.template  clangnomod.manifest.template  collect2.manifest.template  gcc.manifest.template  la_wrapper_run.manifest.template
src/enclave/kmgmt/: kmgmt-attestation.c  kmgmt-utils.c  kmgmt-utils.h  kmgmt.c
src/enclave/kmgmt/edl/: kmgmt.edl
src/enclave/kmgmt/keys/: signing_private_key.pem  signing_public_key.pem
src/server/: kmgmt-ocalls.c  kmgmt-ocalls.h  kmgmt-untrusted.c  kmgmt-untrusted.h  server.c
src/shared/utils/: constants.h  sgx-errors.h  utility.c  utility.h
